添加兼容手机端的touch事件

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+<!--
+	作者：guluohen@qq.com
+	时间：2017-09-27
+	描述：面向对象程序做的2048小游戏,兼容手机端
+-->
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>2048小游戏</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+ 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" type="text/css" href="css/2084.css"/>
 		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="js/touch.js" ></script>
 	</head>
 	<body>
 		<header>
