--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 		</div> 
 	</body>
 </html>
-<script type="text/javascript" src="js/common.js">
-</script>
+<script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/class.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
