--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" type="text/css" href="css/2084.css"/>
 		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="js/zepto.js"></script>
 		<script type="text/javascript" src="js/touch.js" ></script>
 	</head>
 	<body>
 		<header>
 			<h1>2048</h1>
 			<!--新游戏按钮-->
-			<a href="javascript:newGame();" id="newgamebutton">New Game</a>
+			<a href="javascript:;" id="newgamebutton">New Game</a>
 			<!--分数-->
      	   <p>score: <span id="score">0</span></p>
 		</header>
