--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		    <div class="grid-cell" id="grid-cell-3-1"></div>
 		    <div class="grid-cell" id="grid-cell-3-2"></div>
 		    <div class="grid-cell" id="grid-cell-3-3"></div>
+		    <!--<div id='gameover' class='gameover'><p>本次得分</p><span>" + this.score + "</span><a href='javascript:;' id='restartgamebutton'>Restart</a></div>-->
 		</div> 
 	</body>
 </html>
